--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "express": "^4.13.4",
     "body-parser": "^1.14.2",
     "typescript": "^1.7.5",
+    "gulp-typescript": "^2.10.0",
     "tslint": "^3.3.0",
-    "gulp-typescript": "^2.10.0"
+    "gulp-tslint": "^4.3.1"    
   },
   "dependencies": {
     "jquery": "^2.2.0",
