--- a/typescript_config/package.json
+++ b/typescript_config/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "TechBarAngularJsTypeScript",
+  "name": "techbar-angularjs-and-typescript",
   "version": "1.0.0",
   "description": "",
   "scripts": {
@@ -8,7 +8,7 @@
   "author": "alessandro giorgetti",
   "license": "ISC",
   "devDependencies": {
-    "gulp": "^3.9.0",
+    "gulp": "^3.9.1",
     "gulp-sourcemaps": "^1.6.0",
     "path": "^0.12.7",
     "gulp-inject": "^3.0.0",
@@ -16,13 +16,14 @@
     "express": "^4.13.4",
     "body-parser": "^1.14.2",
     "typescript": "^1.7.5",
+    "gulp-typescript": "^2.10.0",
     "tslint": "^3.3.0",
-    "gulp-typescript": "^2.10.0"
+    "gulp-tslint": "^4.3.1"    
   },
   "dependencies": {
     "jquery": "^2.2.0",
-    "angular": "^1.4.9",
-    "angular-route": "^1.4.9",
+    "angular": "^1.5.0",
+    "angular-route": "^1.5.0",
     "bootstrap": "^3.3.6"
   }
 }
